# qs

./: .gitignore  AGENTS.md  agentplan.md
freqtrade-develop/rust/backend/: .env.integration  .env.local  .rustfmt.toml  Cargo.toml  Cargo_test.toml  Dockerfile.production  clippy_output.txt
freqtrade-develop/rust/backend/.cargo/: config.toml
freqtrade-develop/rust/backend/.serena/: project.yml
freqtrade-develop/rust/backend/claudedocs/: API_Specification_Sprint1.md  Implementation_Guide_Sprint1.md  Parallel_Development_Roadmap.md  System_Architecture_Design_Sprint1.md
freqtrade-develop/rust/backend/migrations/: 001_init_schemas.sql  002_create_main_trading_tables.sql  003_normalize_trading_schema.sql  004_cleanup_public_trading_tables.sql
freqtrade-develop/rust/backend/pkg/contracts/: Cargo.toml  build.rs
freqtrade-develop/rust/backend/pkg/contracts/openapi/: trading-api.v1.yaml  trading-api.yaml
freqtrade-develop/rust/backend/pkg/contracts/proto/: trading.proto
freqtrade-develop/rust/backend/pkg/contracts/src/: client.rs  lib.rs  types.rs  unified_contract_manager.rs  validation.rs
freqtrade-develop/rust/backend/services/: common.rs  middleware.rs  mod.rs
freqtrade-develop/rust/backend/services/ai/: Dockerfile  config.py  docker-compose.yml  main.py  requirements.txt
freqtrade-develop/rust/backend/services/ai/ai_clients/: deepseek_client.py  gemini_client.py
freqtrade-develop/rust/backend/services/ai/core/: cache.py  circuit_breaker.py  metrics.py  rate_limiter.py
freqtrade-develop/rust/backend/services/ai/monitoring/: prometheus.yml
freqtrade-develop/rust/backend/services/ai/tests/: test_integration.py
freqtrade-develop/rust/backend/services/data-bridge/: Cargo.toml  Dockerfile
freqtrade-develop/rust/backend/services/data-bridge/src/: main.rs
freqtrade-develop/rust/backend/services/gateway-simple/: Cargo.toml  Dockerfile
freqtrade-develop/rust/backend/services/gateway-simple/src/: config.rs  health.rs  main.rs  proxy.rs
freqtrade-develop/rust/backend/services/risk/: Cargo.toml  Dockerfile
freqtrade-develop/rust/backend/services/risk/src/: config.rs  error.rs  main.rs  models.rs
freqtrade-develop/rust/backend/services/strategy/: Cargo.toml  Dockerfile
freqtrade-develop/rust/backend/services/strategy/.serena/: project.yml
freqtrade-develop/rust/backend/services/strategy/src/: config.rs  error.rs  main.rs  models.rs  simple_handlers.rs
freqtrade-develop/rust/backend/services/tests/unit/: auth_test.rs  data_pipeline_test.rs  trading_test.rs
freqtrade-develop/rust/backend/shared/ab-testing/: Cargo.toml
freqtrade-develop/rust/backend/shared/ab-testing/src/: experiment.rs  experiment_manager.rs  lib.rs  metrics_collector.rs  statistical_analyzer.rs  traffic_splitter.rs
freqtrade-develop/rust/backend/shared/analytics/: Cargo.toml
freqtrade-develop/rust/backend/shared/analytics/src/: adaptive_execution.rs  backtesting_integration.rs  dynamic_factor_selection.rs  factor_batch_processing.rs  high_frequency_optimization.rs  lib.rs  purged_kfold_validation.rs  realistic_market_simulation.rs  regime_detection.rs  smart_routing_scorer.rs  triple_barrier_labeling.rs  walk_forward_validation.rs
freqtrade-develop/rust/backend/shared/cache/: Cargo.toml
freqtrade-develop/rust/backend/shared/cache/src/: distributed.rs  layered.rs  lib.rs  local.rs  metrics.rs
freqtrade-develop/rust/backend/shared/cache/tests/: integration_tests.rs
freqtrade-develop/rust/backend/shared/config/: Cargo.toml  platform.toml
freqtrade-develop/rust/backend/shared/config/src/: database_separation.rs  lib.rs
freqtrade-develop/rust/backend/shared/logging/: Cargo.toml
freqtrade-develop/rust/backend/shared/logging/src/: audit.rs  config.rs  formatter.rs  lib.rs  metrics.rs  middleware.rs  storage.rs  trace.rs
freqtrade-develop/rust/backend/shared/monitoring/src/: mod.rs
freqtrade-develop/rust/backend/shared/performance/: Cargo.toml
freqtrade-develop/rust/backend/shared/performance/src/: cache_manager.rs  connection_pool.rs  lib.rs  memory_manager.rs  memory_optimizer.rs  query_optimizer.rs
freqtrade-develop/rust/backend/shared/protocols/: Cargo.toml
freqtrade-develop/rust/backend/shared/protocols/src/: execution_protocol.rs  lib.rs  market_data_protocol.rs  messages.rs  strategy_protocol.rs  websocket.rs
freqtrade-develop/rust/backend/shared/registry/src/: mod.rs
freqtrade-develop/rust/backend/shared/resilience/: Cargo.toml
freqtrade-develop/rust/backend/shared/resilience/src/: health_aggregator.rs  health_check.rs  lib.rs  outbox.rs  rate_limiter.rs  redis_cluster.rs  retry.rs  timeout.rs
freqtrade-develop/rust/backend/shared/risk-management/: Cargo.toml
freqtrade-develop/rust/backend/shared/risk-management/src/: enhanced_preemptive_control.rs  lib.rs  liquidity_monitor.rs  position_monitor.rs  preemptive_risk_control.rs  risk_engine.rs  risk_metrics.rs
freqtrade-develop/rust/backend/shared/security/: Cargo.toml
freqtrade-develop/rust/backend/shared/security/src/: audit.rs  certificates.rs  (+2 more)
freqtrade-develop/rust/backend/shared/telemetry/: Cargo.toml
freqtrade-develop/rust/backend/shared/types/: Cargo.toml
freqtrade-develop/rust/backend/shared/utils/: Cargo.toml
freqtrade-develop/rust/backend/src/: mod.rs
freqtrade-develop/rust/backend/src/core/: ultra_low_latency_engine.rs
freqtrade-develop/rust/backend/src/data/: cache.rs  data_reader.rs  mod.rs  streaming.rs  time_series.rs
freqtrade-develop/rust/backend/src/deployment/: ci_cd.rs  mod.rs
freqtrade-develop/rust/backend/src/infrastructure/: service_mesh.rs
freqtrade-develop/rust/backend/src/messaging/: event_bus.rs  mod.rs
freqtrade-develop/rust/backend/src/observability/: metrics.rs  mod.rs  tracing.rs
freqtrade-develop/rust/backend/tests/e2e/: Cargo.toml
freqtrade-develop/rust/backend/tests/integration/: Cargo.toml  IMPLEMENTATION_SUMMARY.md  README.md  api_integration_test.rs  run_integration_tests.sh  system_integration_test.sh  test_okx_standalone.rs
freqtrade-develop/rust/ft_rust_backtest/: Cargo.toml
freqtrade-develop/rust/ft_rust_backtest/src/: lib.rs
(+349 files in other folders)
