[package]
name = "ft_rust_backtest"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "ft_rust_backtest"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.21", features = ["extension-module", "abi3-py311"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rayon = "1.10"

[features]
default = ["pyo3/extension-module"]
