[package]
name = "contracts"
version = "0.1.0"
edition = "2021"
description = "AG3 Trading Platform Contracts - Proto/OpenAPI definitions"
license = "Proprietary"

[dependencies]
prost = { workspace = true }
prost-types = { workspace = true }
tonic = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
jsonschema = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }
protoc-bin-vendored = "3"

[dev-dependencies]
tokio-test = { workspace = true }

[lints]
workspace = true

[features]
default = ["client", "server"]
client = []
server = []

