[package]
name = "data-bridge"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time", "fs"] }
anyhow = { workspace = true }
async-nats = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

