[package]
name = "strategy-service"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true, features = ["cors", "trace"] }
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Database
sqlx = { workspace = true }

# Utilities
anyhow = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Config
config = { workspace = true }
toml = { workspace = true }

# Async utilities
async-trait = { workspace = true }

# Mathematical calculations
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }

# Scientific computing
nalgebra = { workspace = true }
ndarray = { workspace = true }

# Statistics
statrs = { workspace = true }
rand_distr = { workspace = true }

# Metrics
prometheus = { workspace = true }
once_cell = { workspace = true }

# Message queue
async-nats = { workspace = true }

# HTTP client for external APIs
reqwest = { workspace = true }

# Random number generation for mock data
fastrand = "2.0"

[[bin]]
name = "strategy-service"
path = "src/main.rs"
