[package]
name = "ab-testing"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }
tracing = "0.1"
rand = "0.8"
statrs = "0.16"
sqlx = { workspace = true }
prometheus = "0.13"
async-trait = "0.1"

# Shared dependencies
platform-types = { path = "../types" }
platform-config = { path = "../config" }
platform-telemetry = { path = "../telemetry" }