[package]
name = "platform-analytics"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = "1.0"

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Time and date
chrono = { workspace = true }

# Numerical computing
ndarray = "0.15"

# UUID support
uuid = { workspace = true }

# Collections
dashmap = { workspace = true }

# Shared platform types
platform-types = { path = "../types" }
platform-utils = { path = "../utils" }

# Additional dependencies
tracing = { workspace = true }
rust_decimal = { workspace = true, features = ["serde-with-float"] }
rust_decimal_macros = { workspace = true }
bincode = "1.3"
flate2 = "1.0"
md5 = "0.7"
futures = { workspace = true }
futures-util = { workspace = true }
rand = "0.8"
fastrand = { workspace = true }
parking_lot = { workspace = true }
tokio-tungstenite = { workspace = true }
redis = { workspace = true }
sqlx = { workspace = true, features = ["rust_decimal"] }

# Scientific computing dependencies
rand_distr = { workspace = true }
nalgebra = { workspace = true }
statrs = { workspace = true }
log = { workspace = true }