[package]
name = "cache"
version = "0.1.0"
edition = "2021"
description = "Shared caching utilities for Rust services"

[lints.rust]
dead_code = "allow"
unused_imports = "allow"
unused_variables = "allow"

[dependencies]
# Redis
redis = { workspace = true, features = ["connection-manager"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Async runtime
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# In-memory cache
moka = { version = "0.12", features = ["future"] }

# Hashing
blake3 = "1.4"

# Compression
flate2 = "1.0"

[dev-dependencies]
tokio-test = "0.4"