[package]
name = "platform-config"
version = "1.0.0"
edition = "2021"
authors = ["Crypto Quant Platform Team"]
description = "Unified configuration management for crypto quant platform"

[lints]
workspace = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
config = { workspace = true }
anyhow = "1.0"
thiserror = { workspace = true }
once_cell = "1.19"
dotenvy = "0.15"

[lib]
name = "platform_config"
crate-type = ["rlib", "cdylib"]