[package]
name = "logging"
version = "0.1.0"
edition = "2021"
description = "统一日志系统 - 生产级可观测性"

[dependencies]
# 核心日志库
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "chrono"] }
tracing-appender = { version = "0.2", optional = true }

# 异步运行时
tokio = { workspace = true }
futures = { workspace = true }

# 序列化
serde = { workspace = true }
serde_json = { workspace = true }

# 时间处理
chrono = { version = "0.4", features = ["serde"] }

# UUID生成
uuid = { version = "1.0", features = ["v4", "serde"] }

# 网络框架
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true, features = ["trace"] }

# 数据库 (用于审计日志)
sqlx = { workspace = true, optional = true }

# 配置管理
config = "0.14"
once_cell = "1.19"

# 错误处理
thiserror = "1.0"
anyhow = "1.0"

# 异步trait支持
async-trait = "0.1"

[features]
default = ["file-rotation", "json-output"]
audit-db = ["sqlx"]
file-rotation = ["tracing-appender"]
json-output = ["tracing-subscriber/json"]
prometheus = ["prometheus-client"]

[dependencies.prometheus-client]
version = "0.22"
optional = true

# 测试依赖
[dev-dependencies]
tempfile = "3.0"