[package]
name = "platform-protocols"
version = "1.0.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Platform types
platform-types = { path = "../types" }

# WebSocket
tokio-tungstenite = { workspace = true }

# Async traits
async-trait = "0.1"

# UUID for message IDs
uuid = { version = "1.6", features = ["v4", "serde"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = { workspace = true }

[lib]
name = "platform_protocols"
crate-type = ["rlib"]