[package]
name = "platform-types"
version = "1.0.0"
edition = "2021"
authors = ["Crypto Quant Platform Team"]
description = "Shared types for crypto quant platform"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
rust_decimal = { version = "1.35", features = ["serde"] }
thiserror = { workspace = true }

[lib]
name = "platform_types"
crate-type = ["rlib"]