[package]
name = "platform-utils"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = { workspace = true }
anyhow = "1.0"
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }
tokio = { version = "1.0", features = ["sync", "time"] }
gethostname = "0.4"